Correct some examples

--- a/regex.html
+++ b/regex.html
@@ -59,7 +59,7 @@
 <div id="header"></div>
 <div id="footer">
 <h1>CoverMyMeds</h1>
-<h2>June 14, 2016</h2>
+<h2><del>June 14</del>July 13, 2016</h2>
 </div>
 
 </div>
@@ -406,8 +406,8 @@ in a regular expression. Be careful about what you think is on each side.</p>
 <div class="slide">
 <h1>Matching Too Much</h1>
 <ul>
-    <li><code>/&lt;p>.+&lt;/p>/</code>
-    <li><code>/&lt;p>[^&lt;]+&lt;/p>/</code>
+    <li><code>/&lt;p&gt;.+&lt;\/p&gt;/</code>
+    <li><code>/&lt;p&gt;[^&lt;]+&lt;\/p&gt;/</code>
 </ul>
 <div class="handout">
 <p>The first of one of the classic examples of why you should not parse
