Fix typo in notes

--- a/regex.html
+++ b/regex.html
@@ -334,7 +334,7 @@ character class matches a character that is not in the list.</p>
 </ul>
 <div class="handout">
 <p>If you know something for certain about a string, match it. Anchors and
-runs of know characters can help make certain you are matching what you think
+runs of known characters can help make certain you are matching what you think
 you are matching. Try not to be over-general in what you are trying to match.
 That may result in matching something that you did not intend to.</p>
 <p>Many people use <code>*</code> when one of the other quantifiers would be
