--- a/regex.html
+++ b/regex.html
@@ -25,6 +25,7 @@
     .centered { text-align: center; }
     .left { float: left; }
     .right { float: right; }
+    del { font-size: 75% }
     h1 + blockquote, h1 + q { margin-top: 2em; }
     td, th {
         border: 1px solid black; text-align: right;
@@ -59,7 +60,7 @@
 <div id="header"></div>
 <div id="footer">
 <h1>CoverMyMeds</h1>
-<h2><del>June 14</del><del>July 13</del><del>August 8, 2016</del><del>November 13, 2019</del>July 7, 2021</h2>
+<h2><del>June 14</del><del>July 13</del><del>August 8, 2016</del><del>November 13, 2019</del><del>July 7, 2021</del>June 1, 2022</h2>
 </div>
 
 </div>
