--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <!-- style sheet links -->
 <link rel="stylesheet" href="ui/local/slides.css" type="text/css" media="projection" id="slideProj" />
 <link rel="stylesheet" href="ui/local/outline.css" type="text/css" media="screen" id="outlineStyle" />
+<link rel="stylesheet" href="ui/local/syntax.css" type="text/css" />
 <link rel="stylesheet" href="ui/default/print.css" type="text/css" media="print" id="slidePrint" />
 <link rel="stylesheet" href="ui/default/opera.css" type="text/css" media="projection" id="operaFix" />
 <!-- S5 JS -->
@@ -31,25 +32,6 @@
         border: 1px solid black; text-align: right;
         padding-left: 1ex; padding-right: 0.5ex;
     }
-    .synAlert { color: #0000ff; }
-    .synBaseN { color: #007f00; }
-    .synBString { color: #c9a7ff; }
-    .synChar { color: #ff00ff; }
-    .synComment { color: #7f7f7f; font-style: italic; }
-    .synDataType { color:#0000ff; }
-    .synDecVal { color:#00007f; }
-    .synError { color:#ff0000; font-style: italic; font-weight: bold; }
-    .synFloat { color:#00007f; }
-    .synFunction { color:#007f00; }
-    .synIString { color:#ff0000; }
-    .synKeyword { font-weight: bold; }
-    .synOperator { color:#ffa500; }
-    .synOthers { color:#b03060; }
-    .synRegionMarker { color:#96b9ff; font-style: italic; }
-    .synReserved { color:#9b30ff; font-weight: bold; }
-    .synString { color:#ff0000\; }
-    .synVariable { color:#0000ff; font-weight: bold; }
-    .synWarning { color:#0000ff; font-style: italic; font-weight: bold; }
  </style>
 </head>
 <body>
